# CodeForPurpose

./: .env  .gitignore  README.md  main.py  pyproject.toml
backend/: analyze_patterns.py  dev.ps1  pyproject.toml  render.yaml  requirements.txt  seed.py  test_endpoint.py  test_query.py  test_safe_to_spend.py
backend/app/: agent.py  analytics.py  cohort_benchmarks.py  database.py  main.py  models.py
backend/tests/: test_analytics.py  test_api.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatWidget.jsx  OverdraftGauge.jsx  PeerBenchmark.jsx  SafeToSpendCard.jsx  SpendingChart.jsx  TransactionHistory.jsx  WhatIfSimulator.jsx
frontend/src/pages/: Landing.jsx  Login.jsx  Signup.jsx
